tests/requests/invalid/041.http
GET /test HTTP/1.1\r\n
Content-Type: application/json\r\n
Content-Type: text/html\r\n
\r\n
